--- a/app/src/main/res/layout/activity_recipe_read.xml
+++ b/app/src/main/res/layout/activity_recipe_read.xml
@@ -41,7 +41,7 @@
             android:adjustViewBounds="true"
             android:scaleType="centerInside" />
 
-        <EditText
+        <!--<EditText
             android:id="@+id/et_search_bar"
             android:layout_width="200dp"
             android:layout_height="48dp"
@@ -57,7 +57,7 @@
             app:layout_constraintHorizontal_bias="0.158"
             app:layout_constraintStart_toEndOf="@id/btn_close"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0" />-->
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/sound_button"
@@ -70,7 +70,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.689"
-            app:layout_constraintStart_toEndOf="@id/et_search_bar"
+            app:layout_constraintStart_toEndOf="perent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -132,7 +132,5 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:clipToPadding="false"
-        android:clipChildren="false"
-        />
-
+        android:clipChildren="false" />
 </LinearLayout>
