--- a/app/src/main/res/layout/activity_recipe_main_read.xml
+++ b/app/src/main/res/layout/activity_recipe_main_read.xml
@@ -193,7 +193,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="33dp"
         android:padding="12dp"
-        android:src="@drawable/ic_close"
+        android:src="@drawable/ic_circle_close"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
