--- a/app/src/main/res/layout/cook_write_timer.xml
+++ b/app/src/main/res/layout/cook_write_timer.xml
@@ -34,7 +34,7 @@
                 android:layout_gravity="top"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ic_tab3"/>
+                android:src="@drawable/ic_add"/>
 
             <EditText
                 android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                 android:layout_gravity="top"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ic_tab3"/>
+                android:src="@drawable/ic_remove"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -84,7 +84,7 @@
                 android:layout_gravity="top"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ic_tab3"/>
+                android:src="@drawable/ic_add"/>
 
             <EditText
                 android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                 android:layout_gravity="top"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ic_tab3"/>
+                android:src="@drawable/ic_remove"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
