--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -58,8 +58,7 @@
         android:id="@+id/delete_material"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_arrow_back"
+        android:src="@drawable/ic_close"
         android:background="@color/white"
         android:layout_margin="5dp" />
 </LinearLayout>
-
