--- a/app/src/main/res/layout/item_tool.xml
+++ b/app/src/main/res/layout/item_tool.xml
@@ -34,8 +34,7 @@ android:orientation="horizontal">
     android:id="@+id/button_delete"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:src="@drawable/ic_arrow_back"
+    android:src="@drawable/ic_close"
     android:background="@color/white"
-    android:layout_margin="5dp"
-    />
+    android:layout_margin="5dp"/>
 </LinearLayout>
