--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- 배경 (회색) -->
+
+    <!-- 배경 트랙 (회색) -->
     <item>
         <shape
             android:shape="ring"
-            android:thicknessRatio="16"
+            android:thickness="20dp"
             android:useLevel="false">
-            <solid android:color="#E0E0E0" />
+            <solid android:color="@color/light_gray" />
         </shape>
     </item>
     <!-- 진행 상태 (주황색) -->
     <item>
         <rotate
             android:fromDegrees="-90"
-            android:pivotX="50%"
-            android:pivotY="50%"
             android:toDegrees="-90">
             <shape
                 android:shape="ring"
-                android:thicknessRatio="16"
+                android:thickness="20dp"
                 android:useLevel="true">
                 <solid android:color="@color/orange" />
             </shape>
         </rotate>
     </item>
+
 </layer-list>
